# hive-os

./: .env.example  .gitignore  .impeccable.md  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  package.json
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
apps/api/: README.md  pyproject.toml
apps/api/docs/: README.md  architecture.md  real-acl-api-smoke.md
apps/api/docs/development/: package-policy.md  setup.md
apps/api/docs/operations/: repository-access.md
apps/api/docs/security/: prompt-injection.md  runner-policy.md  security-model.md
apps/api/hive_os_api/: acp.py  apprunner.py  auth.py  commands.py  db.py  fsapi.py  main.py  migrations.py  profile_seed.py  provisioning.py  runner_specs.py  runners.py  settings.py  wiki_memory.py
apps/api/hive_os_api/security/: command_policy.py
apps/api/scripts/: dev_server.py  seed_demo.py  serve.py  smoke_acl_api.py
apps/api/tests/: test_chat_send.py  test_command_policy.py  test_commands.py  test_files_api.py  test_fsapi.py  test_invites.py  test_migrations.py  test_profile_seed.py  test_projects.py  test_provisioning.py  test_run_errors.py  test_runner_profiles.py  test_runner_specs.py  test_runners.py  test_sessions.py  test_tasks.py  test_team_mode.py  test_wiki_memory.py
docs/: STATUS.md  acl-smoke-test.md  architecture.md  backup.md  desktop-feature-map.md  development-tools.md  installation.md  locked-repo-policy.md  prompt-injection-hardening.md  security-boundaries.md  ui-adaptation-spec.md
scripts/: backup  build  dev  hive-os  install-local  install-macos  seed  (+2 more)
(+79 files in other folders)
